# structshift

./: README.md  pyproject.toml
figures/: ExtendedTable1.py  Extendedfig1.py  Extendedfig2.py  Extendedfig3.py  Extendedfig4.py  Extendedfig5.py  Extendedfig6.py  Extendedfig7.py  figure2.py  figure3.py  figure4.py  figure5.py  figure6.py
scripts/: figure1.py  figure2.py  figure3.py  figure4.py  figure5.py  figure6.py
structshift/analysis/: age_biomass_bins.py  age_selectivity.py  biomass_variability.py  ensemble.py  forecasting.py  forecasting_genus.py  genus_aggregation.py  hexgrid.py  spatial_aggregation.py  spatial_filter.py
structshift/forecasting_pipeline/: __init__.py  area.py  biomass.py  config.py  genus.py  io.py  montecarlo.py  montecarlo_genus.py  outputs.py  preprocessing.py  spatial.py
structshift/plotting/: stats.py  violins.py
structshift/utils/: area_calc.py
structshift/workflows/: run_forecast.py  run_forecast_by_genus.py
workflows/: run_forecast.py  run_forecast_by_genus.py
